# openscreen

./: .gitmodules  CMakeLists.txt  DEPS
cast/: CMakeLists.txt
cast/common/: CMakeLists.txt
cast/common/certificate/: cast_cert_validator_internal.cc
cast/common/certificate/proto/: CMakeLists.txt
cast/common/channel/proto/: CMakeLists.txt
cast/common/discovery/e2e_test/: tests.cc
cast/standalone_receiver/: cast_agent_integration_tests.cc  dummy_player.cc  main.cc  sdl_audio_player.cc  sdl_player_base.cc  static_credentials.cc
cast/standalone_sender/: main.cc  streaming_opus_encoder.cc  streaming_vp8_encoder.cc
cast/streaming/: CMakeLists.txt  bandwidth_estimator_unittest.cc  ntp_time.cc  ntp_time_unittest.cc  receiver.cc  receiver_session.h  receiver_unittest.cc  rtp_time_unittest.cc  sender.cc  sender_packet_router.cc  sender_packet_router_unittest.cc  sender_unittest.cc
cast/test/: cast_socket_e2e_test.cc
discovery/mdns/: mdns_querier.cc  mdns_responder.cc  mdns_service_impl.cc
docs/: style_guide.md
infra/config/global/: commit-queue.cfg  cr-buildbucket.cfg
osp/demo/: osp_demo.cc
osp/impl/discovery/mdns/: mdns_demo.cc
osp/impl/presentation/: presentation_controller_unittest.cc  url_availability_requester_unittest.cc
platform/: CMakeLists.txt
platform/api/: time.h  time_unittest.cc
platform/base/: ip_address.cc  trivial_clock_traits.h
platform/impl/: task_runner.h  task_runner_unittest.cc  time.cc  time_unittest.cc
util/: CMakeLists.txt
